<resources>
    <string name="app_name">Project</string>
    <string name="welcome_to">Welcome To,</string>
    <string name="the_imperial_hub">The Imperial Hub</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello,</string>
    <string name="menu">Menu</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="soups">SOUPS</string>
    <string name="classic_tomato_nsoup">CLASSIC TOMATO \nSOUP</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="manchow_soup">MANCHOW SOUP</string>
    <string name="hot_amp_sour_soup"><![CDATA[HOT & SOUR SOUP]]></string>
    <string name="mac_amp_cheese_nsoup"><![CDATA[MAC & CHEESE \nSOUP]]></string>
    <string name="broccoli_soup">BROCCOLI SOUP</string>
    <string name="starters">STARTERS</string>
    <string name="veg_manchurian">VEG MANCHURIAN</string>
    <string name="paneer_chilli">PANEER CHILLI</string>
    <string name="veg_paneer_tikka">VEG PANEER TIKKA</string>
    <string name="dragon_potato">DRAGON POTATO</string>
    <string name="cheese_ball">CHEESE BALL</string>
    <string name="world_cuisine">WORLD CUISINE</string>
    <string name="peri_peri_pasta">PERI PERI PASTA</string>
    <string name="penne_pasta_pink_sauce_nexotic_veggies">Penne pasta, Pink sauce,\nExotic veggies</string>
    <string name="pink_risotto">PINK RISOTTO</string>
    <string name="arborio_rice_pink_sauce_nexotic_veggies">Arborio rice, Pink sauce,\nExotic veggies</string>
    <string name="sizzler">SIZZLER</string>
    <string name="veg_sizzler">VEG SIZZLER</string>
    <string name="paneer_sizzler">PANEER SIZZLER</string>
    <string name="shashlik_sizzler">SHASHLIK SIZZLER</string>
    <string name="chiness_sizzler">CHINESS SIZZLER</string>
    <string name="main_course">MAIN COURSE</string>
    <string name="palak_paneer">PALAK PANEER</string>
    <string name="kaju_curry">KAJU CURRY</string>
    <string name="kaju_butter_nmasala">KAJU BUTTER \nMASALA</string>
    <string name="paneer_tikka_nmasala">PANEER TIKKA \nMASALA</string>
    <string name="paneer_butter_nmasala">PANEER BUTTER \nMASALA</string>
    <string name="mutter_paneer">MUTTER PANEER</string>
    <string name="paneer_bhurji">PANEER BHURJI</string>
    <string name="shahi_paneer">SHAHI PANEER</string>
    <string name="dal_rice_biryani">DAL/RICE/BIRYANI</string>
    <string name="dal">DAL</string>
    <string name="dal_tadka">DAL TADKA</string>
    <string name="plain_rice">PLAIN RICE</string>
    <string name="jeera_rice">JEERA RICE</string>
    <string name="pulao">PULAO</string>
    <string name="roti_naan_paratha">ROTI/NAAN/PARATHA</string>
    <string name="chapati">CHAPATI</string>
    <string name="butter_tandoori_nroti">BUTTER TANDOORI \nROTI</string>
    <string name="laccha_paratha">LACCHA PARATHA</string>
    <string name="stuffed_paratha">STUFFED PARATHA</string>
    <string name="butter_kulcha">BUTTER KULCHA</string>
    <string name="masala_kulcha">MASALA KULCHA</string>
    <string name="butter_naan">BUTTER NAAN</string>
    <string name="cheese_naan">CHEESE NAAN</string>
    <string name="garlic_naan">GARLIC NAAN</string>
    <string name="desserts">DESSERTS</string>
    <string name="shrikhand">SHRIKHAND</string>
    <string name="fruit_salad">FRUIT SALAD</string>
    <string name="gulab_jamun">GULAB JAMUN</string>
    <string name="rabadi_jalebi">RABADI JALEBI</string>
    <string name="accompaniments">ACCOMPANIMENTS</string>
    <string name="rosted_papad">ROSTED PAPAD</string>
    <string name="masala_papad">MASALA PAPAD</string>
    <string name="curd">CURD</string>
    <string name="buttermilk">BUTTERMILK</string>
    <string name="lassi_sweet">LASSI (SWEET)</string>
    <string name="rate">Rate</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="submit_feedback" >Submit Feedback</string>
</resources>