<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/home_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:cardBackgroundColor="@color/lt_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/loginText"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/black_dark"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/username"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/white"
                    android:layout_marginTop="40dp"
                    android:textColorHint="@color/black_dark"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textColorHint="@color/black_dark"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/loginButton"
                    android:text="@string/login"
                    android:textColor="@color/black_dark"
                    android:textSize="18dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/blue"
                    app:cornerRadius = "20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:id="@+id/signupText"
                    android:textColor="@color/black_dark"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>